--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+* Reimplement configuration reloading
+* Non-blocking DNS resolution
+* Improved table backend lookup, currently this is a linear lookup
 * Move from select() to libevent to support more than FD_SETSIZE / 2 connections
 * HTTP interface for backend servers to determine remote IP and port of connection
-* Out of band TCP data proxying -- I haven't seen a case where the lack of this has caused any issues yet.
