--- a/TODO
+++ b/TODO
@@ -4,6 +4,9 @@
 ** Considering breaking hostname appart at label bounderies and search backwards from TLD
 * Move from select() to libevent to support more than FD_SETSIZE / 2 connections
 * Non-blocking DNS resolution
+* Improve handling of unparsable TLS client hello messages
+** Optionally dump client hello to file
+** Optionally use a fallback hostname/backend server
 * Refactor logging so unit tests do not log to syslog
 * HTTP or DNS interface for backend servers to determine remote IP and port of connection
 * Per connection access logging including hostname, bytes rx/tx, src/dst ip/port, timestamp and duration
