--- a/TODO
+++ b/TODO
@@ -1,12 +1,14 @@
-* Reimplement configuration reloading
 * PID file
-* Improved table backend lookup, currently this is a linear search
-** Considering breaking hostname appart at label bounderies and search backwards from TLD
+* Non-blocking connect() to backend server
 * Move from select() to libevent to support more than FD_SETSIZE / 2 connections
 * Non-blocking DNS resolution
-* Improve handling of unparsable TLS client hello messages
-** Optionally dump client hello to file
-** Optionally use a fallback hostname/backend server
+** Allow nameservers to be specified in configuration file
+* Allow source address for connection to backend to be specified
+* Reimplement configuration reloading
+* Optionally dump invalid requests to file
+* Fallback hostname/backend server
 * Refactor logging so unit tests do not log to syslog
-* HTTP or DNS interface for backend servers to determine remote IP and port of connection
 * Per connection access logging including hostname, bytes rx/tx, src/dst ip/port, timestamp and duration
+* Improved table backend lookup, currently this is a linear search
+** Considering splitting hostname at label boundaries and search backwards from TLD
+* HTTP or DNS interface for backend servers to determine remote IP and port of connection
