--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sniproxy (0.3-1) unstable; urgency=medium
+
+  * Nonblocking connect and DNS resolution
+
+ -- Dustin Lundquist <dustin@null-ptr.net>  Tue, 08 Apr 2014 17:03:37 -0700
+
 sniproxy (0.2) unstable; urgency=low
 
   * Moving pidfile
