--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+sniproxy (0.3.2-1) unstable; urgency=high
+
+  * Fix use after free when client closes connection before DNS response is
+    received.
+  * Fix two DNS query memory leaks.
+
+ -- Dustin Lundquist <dustin@null-ptr.net>  Fri, 11 Apr 2014 16:32:06 -0700
+
 sniproxy (0.3.1-1) unstable; urgency=high
 
   * Fix bug when client completely fills the buffer before the DNS query is
