--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2014-09-26  Dustin Lundquist <dustin@null-ptr.net>
+	0.3.6 release
+
+	* Improve logging:
+	  Fix negative connection duration in access log
+	  Include log rotate script
+	  Reopen log files on SIGHUP
+	  Share file handle to same log file between listeners
+	  Avoid unnecessary reconnection to syslog socket
+	  Cache timestamp string for current second
+	* Man page
+	* Packaging improvements:
+	  passes lintian and rpm-lint
+
 2014-08-13	Dustin Lundquist <dustin@null-ptr.net>
 	0.3.5 release
 
