Improve listener fallback address handling

--- a/man/sniproxy.conf.5
+++ b/man/sniproxy.conf.5
@@ -139,8 +139,9 @@ request. If no table directive is specified the default, unnamed, table will be
 used.
 
 The fallback directive specifies a server to be used if the client request can
-not be parsed or a server can not be found in the table for the hostname
-specified.
+not be parsed, a server can not be found in the table for the hostname
+specified or the hostname can not be resolved.. This should be an IP address
+and port or unix socket path.
 
 The bad_requests directive allows logging the contents of the client request if
 it is not parsable, this is useful for debugging.
