--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2015-04-07  Dustin Lundquist <dustin@null-ptr.net>
+	0.4.0 release
+
+	* Improve DNS resolver:
+	  Support for AAAA records
+	  Configuration options
+	* Global access log
+	* Man page for sniproxy.conf
+	* Reject IP literals as hostnames for wildcard backends
+
 2014-09-26  Dustin Lundquist <dustin@null-ptr.net>
 	0.3.6 release
 
