--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+sniproxy (0.4.0) unstable; urgency=medium
+
+  * Improve DNS resolver:
+    Support for AAAA records
+    Configuration options
+  * Global access log
+  * Man page for sniproxy.conf
+  * Reject IP literals as hostnames for wildcard backends
+
+ -- Dustin Lundquist <dustin@null-ptr.net>  Tue, 07 Apr 2015 09:14:41 -0700
+
 sniproxy (0.3.6) unstable; urgency=medium
 
   * Improve logging:
