--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+sniproxy (0.5.0) unstable; urgency=medium
+
+  * Transparent proxy support
+  * Use accept4() on Linix
+  * Run as group specified in config
+
+ -- Dustin Lundquist <dustin@null-ptr.net>  Wed, 26 Apr 2017 07:17:13 -0700
+
 sniproxy (0.4.0) unstable; urgency=medium
 
   * Improve DNS resolver:
